JENA-2063: Deal with compiler warnings